load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deploymode",
    srcs = ["mode.go"],
    importpath = "github.com/pingcap/tidb/pkg/config/deploymode",
    visibility = ["//visibility:public"],
)

go_test(
    name = "deploymode_test",
    timeout = "short",
    srcs = ["mode_test.go"],
    embed = [":deploymode"],
    flaky = True,
    shard_count = 3,
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_stretchr_testify//require",
    ],
)
