load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parquetfile",
    srcs = ["writer.go"],
    importpath = "github.com/pingcap/tidb/pkg/dumpformat/parquetfile",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_apache_arrow_go_v18//parquet",
        "@com_github_apache_arrow_go_v18//parquet/compress",
        "@com_github_apache_arrow_go_v18//parquet/file",
        "@com_github_apache_arrow_go_v18//parquet/schema",
        "@com_github_docker_go_units//:go-units",
    ],
)

go_test(
    name = "parquetfile_test",
    timeout = "short",
    srcs = ["writer_test.go"],
    embed = [":parquetfile"],
    flaky = True,
    shard_count = 5,
    deps = [
        "@com_github_apache_arrow_go_v18//parquet",
        "@com_github_apache_arrow_go_v18//parquet/compress",
        "@com_github_apache_arrow_go_v18//parquet/file",
        "@com_github_apache_arrow_go_v18//parquet/schema",
        "@com_github_stretchr_testify//require",
    ],
)
